--- a/src/chrome/content/passhash-portable.html
+++ b/src/chrome/content/passhash-portable.html
@@ -190,100 +190,12 @@
                                 </td>
                             </tr>
                             <tr>
-                                <td>
-                                    <input id="s4" name="size" type="radio" value="4"
+                            	<td>
+                            		<input id="hashWordSize" name="hashWordSize" type="number" value="26"
                                     class="option"
                                     onClick="update(this);"
                                     />
-                                    <span class="option">4</span>
-                                </td>
-                                <td>
-                                    <input id="s16" name="size" type="radio" value="16"
-                                    class="option"
-                                    onClick="update(this);"
-                                    />
-                                    <span class="option">16</span>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <input id="s6" name="size" type="radio" value="6"
-                                    class="option"
-                                    onClick="update(this);"
-                                    />
-                                    <span class="option">6</span>
-                                </td>
-                                <td>
-                                    <input id="s18" name="size" type="radio" value="18"
-                                    class="option"
-                                    onClick="update(this);"
-                                    />
-                                    <span class="option">18</span>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <input id="s8" name="size" type="radio" value="8"
-                                    class="option" checked
-                                    onClick="update(this);"
-                                    />
-                                    <span class="option">8</span>
-                                </td>
-                                <td>
-                                    <input id="s20" name="size" type="radio" value="20"
-                                    class="option"
-                                    onClick="update(this);"
-                                    />
-                                    <span class="option">20</span>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <input id="s10" name="size" type="radio" value="10"
-                                    class="option"
-                                    onClick="update(this);"
-                                    />
-                                    <span class="option">10</span>
-                                </td>
-                                <td>
-                                    <input id="s22" name="size" type="radio" value="22"
-                                    class="option"
-                                    onClick="update(this);"
-                                    />
-                                    <span class="option">22</span>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <input id="s12" name="size" type="radio" value="12"
-                                    class="option"
-                                    onClick="update(this);"
-                                    />
-                                    <span class="option">12</span>
-                                </td>
-                                <td>
-                                    <input id="s24" name="size" type="radio" value="24"
-                                    class="option"
-                                    onClick="update(this);"
-                                    />
-                                    <span class="option">24</span>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <input id="s14" name="size" type="radio" value="14"
-                                    class="option"
-                                    onClick="update(this);"
-                                    />
-                                    <span class="option">14</span>
-                                </td>
-                                <td>
-                                    <input id="s26" name="size" type="radio" value="26"
-                                    class="option"
-                                    onClick="update(this);"
-                                    />
-                                    <span class="option">26</span>
-                                </td>
+                            	</td>
                             </tr>
                         </table>
                     </td>
