--- a/src/chrome/locale/en-US/changes.html
+++ b/src/chrome/locale/en-US/changes.html
@@ -20,6 +20,26 @@
     </div>
 
     <h1>Change Log</h1>
+    <h2>Version 1.1.8</h2>
+    <p>2019-05-14</p>
+    <ul>
+			<li>added SHA3-512 alghorithm</li>
+			<li>size 27 and above automatically switches to SHA3</li>
+			<li>fields highlighted when empty</li>
+			<li>re-arranged UI a little</li>
+			<li>changed font in hash word field to be uniformed</li>
+			<li>buttons disabled when unavailable</li>
+		</ul>
+    <h2>Version 1.1.7.2</h2>
+    <p>2019-05-12</p>
+    <ul>
+			<li>optimized storred logins, now it uses one entry per site instead of 3</li>
+			<li>huge performance improvement saving a new login with thousands entries</li>
+			<li>increased max number of password characters to 100</li>
+			<li>password size can be set with increment of 1 instead of 2</li>
+			<li>clicking at hash word selects entire string</li>
+			<li>added copy to clipboard button</li>
+    </ul>
     <h2>Version 1.1.7</h2>
     <p>01-01-11</p>
     <ul>
