--- a/src/chrome/locale/en-US/dialog.html
+++ b/src/chrome/locale/en-US/dialog.html
@@ -67,6 +67,9 @@
         <strong>Mixed case</strong> force the hash word to have both upper and
         lower-case letters.
         </li>
+        <li>
+        <strong>SHA3-512 alghorithm</strong> stronger/more random alghorithm. When size set to 27 and above, this alghorithm automatically used.
+        </li>
     </ul>
     <h1>Restriction Options</h1>
     <ul>
