--- a/src/chrome/locale/en-US/options.html
+++ b/src/chrome/locale/en-US/options.html
@@ -84,6 +84,9 @@
         <strong>Both upper and lower-case letters</strong> forces hash words to
         have at least one of each case letter.
         </li>
+        <li>
+        <strong>SHA3-512 alghorithm</strong> use stronger/more random alghorithm by default. When size set to 27 and above, this alghorithm automatically used.
+        </li>
     </ul>
 
     <h1>Default Size</h1>
