--- a/src/chrome/locale/en-US/about.html
+++ b/src/chrome/locale/en-US/about.html
@@ -16,7 +16,7 @@
     <a class="navlink" href="portable.html">Portable</a>
     <a class="navlink" href="faq.html">FAQ</a>
     <a class="navlink" href="changes.html">Changes</a>
-    <a class="navlink" href="http://wijjo.com/passhash/" target="_content">Home</a>
+    <a class="navlink" href="https://github.com/vanowm/PassHash" target="_content">Home</a>
     </div>
 
     <h1>Introduction</h1>
