--- a/src/chrome/locale/en-US/portable-blurb.html
+++ b/src/chrome/locale/en-US/portable-blurb.html
@@ -1,6 +1,6 @@
 <ul>
     <li>Generates hash words when the
-    <a href="http://wijjo.com/passhash/">Password Hasher</a>
+    <a href="https://github.com/vanowm/PassHash">Password Hasher</a>
     extension is unavailable.</li>
     <li>Backs up and uses saved site options.</li>
     <li>For security, does not know your master key(s).</li>
