--- a/src/chrome/locale/en-US/portable.html
+++ b/src/chrome/locale/en-US/portable.html
@@ -16,7 +16,7 @@
     <span class="navsel">Portable</span>
     <a class="navlink" href="faq.html">FAQ</a>
     <a class="navlink" href="changes.html">Changes</a>
-    <a class="navlink" href="http://wijjo.com/passhash/" target="_content">Home</a>
+    <a class="navlink" href="https://github.com/vanowm/PassHash" target="_content">Home</a>
     </div>
 
     <h1>The Portable Page</h1>
