--- a/src/chrome/locale/en-US/changes.html
+++ b/src/chrome/locale/en-US/changes.html
@@ -11,15 +11,37 @@
     <div class="navigation">
     <a class="navlink" href="about.html">About</a>
     <a class="navlink" href="tutorial.html">Tutorial</a>
-    <a class="navlink" href="options.html">Options</a>
+    <a class="navlink" href="options.html">Settings</a>
     <a class="navlink" href="dialog.html">Dialog</a>
     <a class="navlink" href="portable.html">Portable</a>
     <a class="navlink" href="faq.html">FAQ</a>
     <span class="navsel">Changes</span>
-    <a class="navlink" href="http://wijjo.com/passhash/" target="_content">Home</a>
+    <a class="navlink" href="https://github.com/vanowm/PassHash" target="_content">Home</a>
     </div>
 
     <h1>Change Log</h1>
+    <h2>Version 1.2.0</h2>
+    <p>2019-09-29</p>
+    <ul>
+			<li>Added toolbar/statusbar buttons</li>
+			<li>Fixed password field buttons were not shown properly on some websites</li>
+			<li>Added "Force autocomplete" option</li>
+			<li>Added "Remember last used options" option</li>
+			<li>Added backup/restore for settings and logins</li>
+			<li>Added ability delete all saved logins</li>
+			<li>Changed preferences in about:config are reflected in options window</li>
+			<li>Password size now saved if changed</li>
+		</ul>
+    <h2>Version 1.1.8.1</h2>
+    <p>2019-05-14</p>
+    <ul>
+			<li>Reveal hash word didn't work</li>
+			<li>size 27 and above automatically switches to SHA3</li>
+			<li>fields highlighted when empty</li>
+			<li>re-arranged UI a little</li>
+			<li>changed font in hash word field to be uniformed</li>
+			<li>buttons disabled when unavailable</li>
+		</ul>
     <h2>Version 1.1.8</h2>
     <p>2019-05-14</p>
     <ul>
