--- a/src/chrome/locale/en-US/faq.html
+++ b/src/chrome/locale/en-US/faq.html
@@ -11,12 +11,12 @@
     <div class="navigation">
     <a class="navlink" href="about.html">About</a>
     <a class="navlink" href="tutorial.html">Tutorial</a>
-    <a class="navlink" href="options.html">Options</a>
+    <a class="navlink" href="options.html">Settings</a>
     <a class="navlink" href="dialog.html">Dialog</a>
     <a class="navlink" href="portable.html">Portable</a>
     <span class="navsel">FAQ</span>
     <a class="navlink" href="changes.html">Changes</a>
-    <a class="navlink" href="http://wijjo.com/passhash/" target="_content">Home</a>
+    <a class="navlink" href="https://github.com/vanowm/PassHash" target="_content">Home</a>
     </div>
 
     <h1>Frequently-Asked Questions:</h1>
