--- a/src/chrome/locale/en-US/options.html
+++ b/src/chrome/locale/en-US/options.html
@@ -11,12 +11,12 @@
     <div class="navigation">
     <a class="navlink" href="about.html">About</a>
     <a class="navlink" href="tutorial.html">Tutorial</a>
-    <span class="navsel">Options</span>
+    <span class="navsel">Settings</span>
     <a class="navlink" href="dialog.html">Dialog</a>
     <a class="navlink" href="portable.html">Portable</a>
     <a class="navlink" href="faq.html">FAQ</a>
     <a class="navlink" href="changes.html">Changes</a>
-    <a class="navlink" href="http://wijjo.com/passhash/" target="_content">Home</a>
+    <a class="navlink" href="https://github.com/vanowm/PassHash" target="_content">Home</a>
     </div>
 
     <h1>Security Levels</h1>
