--- a/src/chrome/locale/en-US/dialog.html
+++ b/src/chrome/locale/en-US/dialog.html
@@ -11,12 +11,12 @@
     <div class="navigation">
     <a class="navlink" href="about.html">About</a>
     <a class="navlink" href="tutorial.html">Tutorial</a>
-    <a class="navlink" href="options.html">Options</a>
+    <a class="navlink" href="options.html">Settings</a>
     <span class="navsel">Dialog</span>
     <a class="navlink" href="portable.html">Portable</a>
     <a class="navlink" href="faq.html">FAQ</a>
     <a class="navlink" href="changes.html">Changes</a>
-    <a class="navlink" href="http://wijjo.com/passhash/" target="_content">Home</a>
+    <a class="navlink" href="https://github.com/vanowm/PassHash" target="_content">Home</a>
     </div>
 
     <h1>Fields and Buttons</h1>
