--- a/src/chrome/locale/en-US/portable.html
+++ b/src/chrome/locale/en-US/portable.html
@@ -11,7 +11,7 @@
     <div class="navigation">
     <a class="navlink" href="about.html">About</a>
     <a class="navlink" href="tutorial.html">Tutorial</a>
-    <a class="navlink" href="options.html">Options</a>
+    <a class="navlink" href="options.html">Settings</a>
     <a class="navlink" href="dialog.html">Dialog</a>
     <span class="navsel">Portable</span>
     <a class="navlink" href="faq.html">FAQ</a>
