--- a/src/chrome/locale/en-US/changes.html
+++ b/src/chrome/locale/en-US/changes.html
@@ -20,6 +20,17 @@
     </div>
 
     <h1>Change Log</h1>
+    <h2>Version 1.2.1</h2>
+    <p>2020-11-17</p>
+    <ul>
+			<li>Added ability restrict punctuation characters</li>
+			<li>Added more punctuation characters</li>
+			<li>Improved detection of password fields</li>
+			<li>Min password size is now limited to 4 characters</li>
+			<li>SHA3 default setting automatically selected when hashword size is above 26</li>
+			<li>"Ok" button is disabled if hashword can't be generated </li>
+			<li>Options in portable page affect each other</li>
+		</ul>
     <h2>Version 1.2.0</h2>
     <p>2019-09-29</p>
     <ul>
@@ -31,6 +42,7 @@
 			<li>Added ability delete all saved logins</li>
 			<li>Changed preferences in about:config are reflected in options window</li>
 			<li>Password size now saved if changed</li>
+			<li>Fixed z-index of markers</li>
 		</ul>
     <h2>Version 1.1.8.1</h2>
     <p>2019-05-14</p>
