--- a/src/chrome/locale/en-US/changes.html
+++ b/src/chrome/locale/en-US/changes.html
@@ -20,6 +20,11 @@
     </div>
 
     <h1>Change Log</h1>
+    <h2>Version 1.2.2</h2>
+    <p>2020-11-17</p>
+    <ul>
+			<li>Fixed punctuation setting was not saved in some cases</li>
+		</ul>
     <h2>Version 1.2.1</h2>
     <p>2020-11-17</p>
     <ul>
