--- a/src/chrome/locale/en-US/changes.html
+++ b/src/chrome/locale/en-US/changes.html
@@ -2,37 +2,47 @@
 
 <head>
 
-    <link rel="stylesheet" href="../../skin/help.css">
+		<link rel="stylesheet" href="../../skin/help.css">
 
 </head>
 
 <body>
 
-    <div class="navigation">
-    <a class="navlink" href="about.html">About</a>
-    <a class="navlink" href="tutorial.html">Tutorial</a>
-    <a class="navlink" href="options.html">Settings</a>
-    <a class="navlink" href="dialog.html">Dialog</a>
-    <a class="navlink" href="portable.html">Portable</a>
-    <a class="navlink" href="faq.html">FAQ</a>
-    <span class="navsel">Changes</span>
-    <a class="navlink" href="https://github.com/vanowm/PassHash" target="_content">Home</a>
-    </div>
+		<div class="navigation">
+		<a class="navlink" href="about.html">About</a>
+		<a class="navlink" href="tutorial.html">Tutorial</a>
+		<a class="navlink" href="options.html">Settings</a>
+		<a class="navlink" href="dialog.html">Dialog</a>
+		<a class="navlink" href="portable.html">Portable</a>
+		<a class="navlink" href="faq.html">FAQ</a>
+		<span class="navsel">Changes</span>
+		<a class="navlink" href="https://github.com/vanowm/PassHash" target="_content">Home</a>
+		</div>
 
-    <h1>Change Log</h1>
-    <h2>Version 1.2.3</h2>
-    <p>2020-11-20</p>
-    <ul>
+		<h1>Change Log</h1>
+		<h2>Version 1.3.0</h2>
+		<p>2020-11-23</p>
+		<ul>
+			<li>Added ability open settings from toolbar button</li>
+			<li>Added more password marker position options</li>
+			<li>Added "save" checkbox that allows generate password and insert it into field without storing it</li>
+			<li>Password markers are highlighted when cursor is over</li>
+			<li>Changes in settings automatically applied to existing password markers</li>
+			<li>Fixed "Append site tag to master key" setting wasn't included in security presets</li>
+		</ul>
+		<h2>Version 1.2.3</h2>
+		<p>2020-11-20</p>
+		<ul>
 			<li>Fixed incorrect default punctuation for unsaved websites</li>
 		</ul>
-    <h2>Version 1.2.2</h2>
-    <p>2020-11-17</p>
-    <ul>
+		<h2>Version 1.2.2</h2>
+		<p>2020-11-17</p>
+		<ul>
 			<li>Fixed punctuation setting was not saved in some cases</li>
 		</ul>
-    <h2>Version 1.2.1</h2>
-    <p>2020-11-17</p>
-    <ul>
+		<h2>Version 1.2.1</h2>
+		<p>2020-11-17</p>
+		<ul>
 			<li>Added ability restrict punctuation characters</li>
 			<li>Added more punctuation characters</li>
 			<li>Improved detection of password fields</li>
@@ -41,9 +51,9 @@
 			<li>"Ok" button is disabled if hashword can't be generated </li>
 			<li>Options in portable page affect each other</li>
 		</ul>
-    <h2>Version 1.2.0</h2>
-    <p>2019-09-29</p>
-    <ul>
+		<h2>Version 1.2.0</h2>
+		<p>2019-09-29</p>
+		<ul>
 			<li>Added toolbar/statusbar buttons</li>
 			<li>Fixed password field buttons were not shown properly on some websites</li>
 			<li>Added "Force autocomplete" option</li>
@@ -54,9 +64,9 @@
 			<li>Password size now saved if changed</li>
 			<li>Fixed z-index of markers</li>
 		</ul>
-    <h2>Version 1.1.8.1</h2>
-    <p>2019-05-14</p>
-    <ul>
+		<h2>Version 1.1.8.1</h2>
+		<p>2019-05-14</p>
+		<ul>
 			<li>Reveal hash word didn't work</li>
 			<li>size 27 and above automatically switches to SHA3</li>
 			<li>fields highlighted when empty</li>
@@ -64,9 +74,9 @@
 			<li>changed font in hash word field to be uniformed</li>
 			<li>buttons disabled when unavailable</li>
 		</ul>
-    <h2>Version 1.1.8</h2>
-    <p>2019-05-14</p>
-    <ul>
+		<h2>Version 1.1.8</h2>
+		<p>2019-05-14</p>
+		<ul>
 			<li>added SHA3-512 alghorithm</li>
 			<li>size 27 and above automatically switches to SHA3</li>
 			<li>fields highlighted when empty</li>
@@ -74,116 +84,116 @@
 			<li>changed font in hash word field to be uniformed</li>
 			<li>buttons disabled when unavailable</li>
 		</ul>
-    <h2>Version 1.1.7.2</h2>
-    <p>2019-05-12</p>
-    <ul>
+		<h2>Version 1.1.7.2</h2>
+		<p>2019-05-12</p>
+		<ul>
 			<li>optimized storred logins, now it uses one entry per site instead of 3</li>
 			<li>huge performance improvement saving a new login with thousands entries</li>
 			<li>increased max number of password characters to 100</li>
 			<li>password size can be set with increment of 1 instead of 2</li>
 			<li>clicking at hash word selects entire string</li>
 			<li>added copy to clipboard button</li>
-    </ul>
-    <h2>Version 1.1.7</h2>
-    <p>01-01-11</p>
-    <ul>
-        <li>Fix portable page for Firefox 4.0 and later</li>
-        <li>Fix portable page on older IE</li>
-    </ul>
-    <h2>Version 1.1.6</h2>
-    <p>01-23-10</p>
-    <ul>
-        <li>Firefox 3.6</li>
-    </ul>
-    <h2>Version 1.1.5</h2>
-    <p>07-05-09</p>
-    <ul>
-        <li>Firefox 3.5</li>
-    </ul>
-    <h2>Version 1.1.4</h2>
-    <p>08-31-08</p>
-    <ul>
-        <li>Generate portable page using template for easier translation/maintenance.</li>
-        <li>Focus on site tag if empty.</li>
-    </ul>
-    <h2>Version 1.1.3</h2>
-    <p>07-05-08</p>
-    <ul>
-        <li>Minor fixes for German translation and marker styles.</li>
-        <li>May fix some marker display anomalies.</li>
-    </ul>
-    <h2>Version 1.1.2</h2>
-    <p>07-03-08</p>
-    <ul>
-        <li>Fixed string bundle naming conflict with yesscript.</li>
-        <li>Fixed credits in changes.html</li>
-    </ul>
-    <h2>Version 1.1.1</h2>
-    <p>06-21-08</p>
-    <ul>
-        <li>Fixed bugs.</li>
-        <li>Added the "Guess full domain" option.</li>
-    </ul>
-    <h2>Version 1.1.0</h2>
-    <p>06-21-08</p>
-    <ul>
-        <li>Made compatible with Firefox 3, thanks largely to code contributed
-        by Kamil.</li>
-        <li>Support a greater range of hash word sizes.</li>
-        <li>Add a digits-only restriction for numeric hash words (e.g. for PINs).</li>
-        <li>Add preferences passhash.optShortcutKeyCode and passhash.optShortcutKeyMods
-        as a backdoor to changing the assigned shortcut key and modifiers.</li>
-        <li>Add Italian translation contributed by Fabrizio.</li>
-        <li>Add German translation contributed by Robin Reisinger.</li>
-        <li>Handle .co.uk and similar country domains.</li>
-        <li>Focus on master key instead of site tag.</li>
-    </ul>
-    <h2>Version 1.0.5</h2>
-    <p>01-27-07</p>
-    <ul>
-        <li>Changed shortcut key to Control-F6 for better compatibility with
-        regional keyboards.</li>
-    </ul>
-    <h2>Version 1.0.4</h2>
-    <p>12-02-06</p>
-    <ul>
-        <li>Display portable hash word generator page from options dialog.</li>
-    </ul>
-    <h2>Version 1.0.3</h2>
-    <p>11-27-06</p>
-    <ul>
-        <li>Toggle password masks using optional markers.</li>
-    </ul>
-    <h2>Version 1.0.2</h2>
-    <p>11-22-06</p>
-    <ul>
-        <li>Support suppression of special characters</li>
-    </ul>
-    <h2>Version 1.0.1</h2>
-    <p>11-21-06</p>
-    <ul>
-        <li>Handle the case where a required digit seems to be present, but it
-        gets overwritten by a forced punctuation character.</li>
-    </ul>
-    <h2>Version 1.0.0</h2>
-    <p>11-19-06</p>
-    <ul>
-        <li>Add preferences and dialog options for digits, punctuation and
-        mixed case hash word requirements.  Save choices for each site.</li>
-        <li>Support hash word size selection as a preference and as a dialog
-        option.  Save for each site.</li>
-        <li>Improve documentation structure and usability.</li>
-    </ul>
-    <h2>Version 0.9.5</h2>
-    <p>09-28-06</p>
-    <ul>
-        <li>Update for Firefox 2.0.</li>
-    </ul>
-    <h2>Version 0.9.4</h2>
-    <p>09-05-06</p>
-    <ul>
-        <li>First "good" release.</li>
-    </ul>
+		</ul>
+		<h2>Version 1.1.7</h2>
+		<p>01-01-11</p>
+		<ul>
+				<li>Fix portable page for Firefox 4.0 and later</li>
+				<li>Fix portable page on older IE</li>
+		</ul>
+		<h2>Version 1.1.6</h2>
+		<p>01-23-10</p>
+		<ul>
+				<li>Firefox 3.6</li>
+		</ul>
+		<h2>Version 1.1.5</h2>
+		<p>07-05-09</p>
+		<ul>
+				<li>Firefox 3.5</li>
+		</ul>
+		<h2>Version 1.1.4</h2>
+		<p>08-31-08</p>
+		<ul>
+				<li>Generate portable page using template for easier translation/maintenance.</li>
+				<li>Focus on site tag if empty.</li>
+		</ul>
+		<h2>Version 1.1.3</h2>
+		<p>07-05-08</p>
+		<ul>
+				<li>Minor fixes for German translation and marker styles.</li>
+				<li>May fix some marker display anomalies.</li>
+		</ul>
+		<h2>Version 1.1.2</h2>
+		<p>07-03-08</p>
+		<ul>
+				<li>Fixed string bundle naming conflict with yesscript.</li>
+				<li>Fixed credits in changes.html</li>
+		</ul>
+		<h2>Version 1.1.1</h2>
+		<p>06-21-08</p>
+		<ul>
+				<li>Fixed bugs.</li>
+				<li>Added the "Guess full domain" option.</li>
+		</ul>
+		<h2>Version 1.1.0</h2>
+		<p>06-21-08</p>
+		<ul>
+				<li>Made compatible with Firefox 3, thanks largely to code contributed
+				by Kamil.</li>
+				<li>Support a greater range of hash word sizes.</li>
+				<li>Add a digits-only restriction for numeric hash words (e.g. for PINs).</li>
+				<li>Add preferences passhash.optShortcutKeyCode and passhash.optShortcutKeyMods
+				as a backdoor to changing the assigned shortcut key and modifiers.</li>
+				<li>Add Italian translation contributed by Fabrizio.</li>
+				<li>Add German translation contributed by Robin Reisinger.</li>
+				<li>Handle .co.uk and similar country domains.</li>
+				<li>Focus on master key instead of site tag.</li>
+		</ul>
+		<h2>Version 1.0.5</h2>
+		<p>01-27-07</p>
+		<ul>
+				<li>Changed shortcut key to Control-F6 for better compatibility with
+				regional keyboards.</li>
+		</ul>
+		<h2>Version 1.0.4</h2>
+		<p>12-02-06</p>
+		<ul>
+				<li>Display portable hash word generator page from options dialog.</li>
+		</ul>
+		<h2>Version 1.0.3</h2>
+		<p>11-27-06</p>
+		<ul>
+				<li>Toggle password masks using optional markers.</li>
+		</ul>
+		<h2>Version 1.0.2</h2>
+		<p>11-22-06</p>
+		<ul>
+				<li>Support suppression of special characters</li>
+		</ul>
+		<h2>Version 1.0.1</h2>
+		<p>11-21-06</p>
+		<ul>
+				<li>Handle the case where a required digit seems to be present, but it
+				gets overwritten by a forced punctuation character.</li>
+		</ul>
+		<h2>Version 1.0.0</h2>
+		<p>11-19-06</p>
+		<ul>
+				<li>Add preferences and dialog options for digits, punctuation and
+				mixed case hash word requirements.  Save choices for each site.</li>
+				<li>Support hash word size selection as a preference and as a dialog
+				option.  Save for each site.</li>
+				<li>Improve documentation structure and usability.</li>
+		</ul>
+		<h2>Version 0.9.5</h2>
+		<p>09-28-06</p>
+		<ul>
+				<li>Update for Firefox 2.0.</li>
+		</ul>
+		<h2>Version 0.9.4</h2>
+		<p>09-05-06</p>
+		<ul>
+				<li>First "good" release.</li>
+		</ul>
 
 </body>
 
